--- a/sass/blocks/_stock-form-interval.sass
+++ b/sass/blocks/_stock-form-interval.sass
@@ -102,6 +102,9 @@ $block: ".stock-form-interval"
     #{$block}_size_narrow &
       height: 35px
 
+    @media screen and (max-width: 360px)
+      width: 20px
+
     &:after
       content: ""
       position: absolute
