--- a/sass/blocks/_stock-legend.sass
+++ b/sass/blocks/_stock-legend.sass
@@ -91,6 +91,7 @@ $block: ".stock-legend"
 
     &_type_rectangle
       width: 40px
+      margin-right: 5px
 
     &_icon_gift
       margin-top: -2px
@@ -110,6 +111,19 @@ $block: ".stock-legend"
     color: #1c2841
     white-space: normal
     vertical-align: middle
+
+
+  // $Legend text faded
+  &__text-faded
+    color: #aaa
+
+
+  &__pointer + &__text
+    max-width: calc(100% - 20px)
+
+
+  &__pointer_type_rectangle + &__text
+    max-width: calc(100% - 45px)
 
 
   // $Legend link
